<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_pinjaman"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_pinjaman"
        android:labelFor="@id/input_pinjaman"
        android:hint="@string/jumlah_pinjaman"
        android:autofillHints="@string/jumlah_pinjaman"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/waktu_pinjaman_bulan"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_lama_pinjaman"
        android:hint="@string/perbulan"
        android:autofillHints="@string/waktu_pinjaman_bulan"
        android:labelFor="@id/input_lama_pinjaman"
        android:inputType="number"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bunga"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/input_bunga"
        android:layout_height="wrap_content"
        android:hint="@string/tahun"
        android:autofillHints="@string/bunga"
        android:labelFor="@id/input_bunga"
        android:inputType="number"/>
</LinearLayout>
        <Button
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/hitung"
            android:textSize="20sp"
            android:onClick="HitungPinjaman"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewElement"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>